made some changes with file name

--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ronald Paek's Personal Website</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" integrity="sha256-46qynGAkLSFpVbEBog43gvNhfrOj+BmwXdxFgVK/Kvc=" crossorigin="anonymous" />  
-</head>
 <body>
     <header>
         <div class="nav-bar-container">
@@ -29,7 +27,7 @@
         <p class="skills">My Current Skills</p>
 
         <div class=image-container>
-            <img class="current-skills" src="/images/current-skills.png" alt="">
+            <img class="current-skills" src="images/currentskills.png" alt="">
         </div>
     </header>
 
@@ -47,7 +45,7 @@
             <nav>
                 <ul>
                     <li><a href="https://github.com/ronpaek100">Github</a></li>
-                    <li><a href="https://www.linkedin.com/in/ronpaek100/">Linkedin</a></li>
+                    <li><a href="https://linkedin.com/ronpaek100">LinkedIn</a></li>
                 </ul>
             </nav>
         </div>
