changing file names

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <p class="skills">My Current Skills</p>
 
         <div class=image-container>
-            <img class="current-skills" src="images/currentskills.png" alt="">
+            <img class="current-skills" src="images/current-skills.png" alt="">
         </div>
     </header>
 
