--- a/index.html
+++ b/index.html
@@ -45,10 +45,11 @@
             <nav>
                 <ul>
                     <li><a href="https://github.com/ronpaek100">Github</a></li>
-                    <li><a href="https://linkedin.com/ronpaek100">LinkedIn</a></li>
+                    <li><a href="https://www.linkedin.com/in/ronpaek100/">LinkedIn</a></li>
                 </ul>
             </nav>
         </div>
     </footer>
 </body>
 </html>
+
