--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ronald Paek's Personal Website</title>
     <link rel="stylesheet" href="css/style.css">
+</head>
+
 <body>
     <header>
         <div class="header-container">
@@ -31,7 +33,6 @@
                 <img class="current-skills" src="images/current-skills.png" alt="">
             </div>
         </div>
-
     </header>
 
     <main>
