--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                         <li><a href="#">Home</a></li>
                         <li><a href="#about">About</a></li>
                         <li><a href="#contact">Contact</a></li>
-                        <li><a href="#">Resume</a></li>
+                        <li><a href="ronalds-resume.pdf" target="__">Resume</a></li>
                     </ul>
                 </nav>
             </div>
