--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </main>
 
     <footer>
-        <h2 id="contact">Contact</h2>
+        <h2 id="contact">Contact Me</h2>
         <div class="footer-nav-container">
             <nav>
                 <ul>
